# HandDigit

./: .directory  CMakeLists.txt  LICENSE  Label.csv  README.md
.kdev4/: HandDigit.kdev4
slides/: reporte.tex  slides.tex
source/: Image.hpp  Misc.hpp  Probability.hpp  main.cpp
